end{ totally - login_register}

--- a/lightblog-web/src/main/webapp/login_register.html
+++ b/lightblog-web/src/main/webapp/login_register.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>LightBlog-登录</title>
 		<!--css-->
-		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">		
+		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >		
 		<link href="css/login_register.css" rel="stylesheet">
 		<link href="css/particles.css" rel="stylesheet">
 		
@@ -19,9 +19,9 @@
 				<div class="menu_login_register">
 					<div id="to_login"><span id="login_label" class="menu_label_active">登录</span></div>
 					<div id="to_register"><span id="register_label" class="menu_label_slake">注册</span></div>
-				</div>
-				<div id="menu_choosed">
-					<div class="menu_choosed_style">
+				</div>				
+				<div id="menu_choosed">					
+					<div class="menu_choosed_style">					
 						<form name="form_login" action="login" method="post">
 							<div class="form-group">
 							  <label class="control-label sr-only" for="input_userid_login">UserId</label>
@@ -32,7 +32,7 @@
 							  <input type="password" name="userPassword" placeholder="请输入密码..." class="form-control input-lg" id="input_userpassword_login"/>				  
 							</div>				
 <!--							<div class="l-captcha" data-site-key="3bdf0852d185278011b28b3482b1f65c" data-callback="response_check_man_set" data-width="100%"></div>-->
-							<button id="button_login" type="button" class="btn btn-success btn-lg btn-block">登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
+							<button id="button_login" type="button" class="btn btn-success btn-lg btn-block" >登&nbsp;&nbsp;&nbsp;&nbsp;录</button>
 							
 						</form>						
 					</div>					
@@ -46,8 +46,8 @@
 		<div id="particles-js"></div>		
 		<script src="js/particles.js"></script> 
 		<script src="js/app.js"></script> 		
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>		
-		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		  <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>	
+		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 		<script charset="utf-8" src="js/login_register.js"></script>
 		<!--luosimao-->
 <!--		<script src="//captcha.luosimao.com/static/js/api.js"></script>-->
