--- a/lightblog-web/src/main/webapp/editPage.html
+++ b/lightblog-web/src/main/webapp/editPage.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="form-group">
 				<label for="input_category" class="control-label">分类</label>
-				<input type="text" class="form-control" id="input_category" placeholder="请输入分类...">
+				<input type="text" class="form-control" id="input_category" placeholder="请输入分类..." autocomplete="off" data-provide="typeahead">
 			</div>
 			<div id="panel_tag">
 				<label class="control-label">添加标签</label>
