end{ part about | part personal search}

--- a/lightblog-web/src/main/webapp/mainPage.html
+++ b/lightblog-web/src/main/webapp/mainPage.html
@@ -42,7 +42,7 @@
 								<li><a href="javascript:jump_to_page_worklist();"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span><br/>归档 </a></li>
 								<li><a href="javascript:jump_to_page_categorylist();"><span class="glyphicon glyphicon-book" aria-hidden="true"></span><br/>分类 </a></li>
 								<li><a href="javascript:jump_to_page_taglist();"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><br/>标签 </a></li>
-								<li><a href="/lightblog/search.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><br/>搜索 </a></li>
+								<li><a href="/lightblog/searchPage.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><br/>搜索 </a></li>
 								<li><a href="javascript:jump_to_page_about();"><span class="glyphicon glyphicon-user" aria-hidden="true"></span><br/>关于 </a></li>
 							</ul>
 						</div>
@@ -134,7 +134,7 @@
                         tex             : true,  // 默认不解析
                         flowChart       : true,  // 默认不解析
                         sequenceDiagram : true,  // 默认不解析
-                        tocm            : true,    // Using [TOCM]
+                        tocm            : true   // Using [TOCM]
                     });
                 });
 
