--- a/lightblog-web/src/main/webapp/aboutPage.html
+++ b/lightblog-web/src/main/webapp/aboutPage.html
@@ -4,15 +4,18 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>LightBlog-分类</title>
+	<title>关于我</title>
 	<!--css-->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-	<link href="css/page_category.css" rel="stylesheet">
+	<link rel="stylesheet" href="editormd/css/editormd.preview.css" />
+	<link href="css/page_about.css" rel="stylesheet">
+	<link href="css/mian_page.css" rel="stylesheet">
+	<link href="css/page_work_detail.css" rel="stylesheet">
 	<link href="css/common.css" rel="stylesheet">
 </head>
 
 <body>
-<div class="container-fluid auto_height bold_black_top_border font_basic">
+<div class="container-fluid auto_height bold_black_top_border font_basic height_full">
 	<div class="row">
 		<div id="content_main" class="col-xs-12">
 			<div class="content_head_info_nav">
@@ -53,36 +56,58 @@
 					<div class="block_prod_owner text-center"><span class="text-muted introduction_owner"></span></div>
 				</div>
 			</div>
-			<div class="container-fluid">
-				<div class="row">
-					<div id="container_category" class="col-md-6 col-md-offset-3 text-center">
-						<p class="text-center h1">category</p>
-						<div class="h4 text-center margin_botttom_20">目前共计<span id="sum_category" class="h4"></span>个分类 </div>
+			<div id="container_work" class="center-block text-center">
 
+				<div id="content_article" class="content_article text-justify"></div>
 
-					</div>
-				</div>
+				<hr class="hr_sepa">
 			</div>
 			<div id="declare_foot" class="text-center">
 				<span class="glyphicon glyphicon-copyright-mark" aria-hidden="true"></span>&nbsp;2017&nbsp;&nbsp;
 				<span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;LightBlog
 			</div>
 		</div>
-		<div id="info_owner_silder_bar" class="hiden hidden-xs">
-
-		</div>
 	</div>
 </div>
-<div id="btn_to_edit" class="hidden-xs" data-toggle="tooltip" title="开始写作">
+<div id="btn_to_edit_about" class="hidden-xs" data-toggle="tooltip" title="编辑关于页">
 	<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 </div>
 <div id="btn_to_head" class="hidden-xs" data-toggle="tooltip" title="回到顶部">
 	<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
 </div>
+
 <!--js-->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script charset="utf-8" src="js/page_category.js"></script>
-<script charset="utf-8" src="js/page_common.js"></script>
+<script charset="utf-8" src="js/page_about.js"></script>
+<script src="js/page_common.js"></script>
+
+<!--HtmlToMarkdown所需js-->
+<script src="editormd/lib/marked.min.js"></script>
+<script src="editormd/lib/prettify.min.js"></script>
+
+<script src="editormd/lib/raphael.min.js"></script>
+<script src="editormd/lib/underscore.min.js"></script>
+<script src="editormd/lib/sequence-diagram.min.js"></script>
+<script src="editormd/lib/flowchart.min.js"></script>
+<script src="editormd/lib/jquery.flowchart.min.js"></script>
+
+<script src="editormd/editormd.js"></script>
+<script type="text/javascript">
+    $(function() {
+        editormd.markdownToHTML("content_article", {
+            markdown        : markdown,
+            htmlDecode      : "style,script,iframe",
+            tocm            : true,    // Using [TOCM]
+            emoji           : true,
+            taskList        : true,
+            tex             : true,  // 默认不解析
+            flowChart       : true,  // 默认不解析
+            sequenceDiagram : true,  // 默认不解析
+        });
+    });
+</script>
+
+
 </body>
 </html>
