--- a/lightblog-web/src/main/webapp/searchPage.html
+++ b/lightblog-web/src/main/webapp/searchPage.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>LightBlog-分类</title>
+	<title>LightBlog-搜索</title>
 	<!--css-->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-	<link href="css/page_category.css" rel="stylesheet">
+	<link href="css/page_search.css" rel="stylesheet">
 	<link href="css/common.css" rel="stylesheet">
 </head>
 
@@ -40,7 +40,7 @@
 								<li><a href="javascript:jump_to_page_main();"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><br/>首页 </a></li>
 								<li><a href="javascript:jump_to_page_worklist();"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span><br/>归档 </a></li>
 								<li><a href="javascript:jump_to_page_categorylist();"><span class="glyphicon glyphicon-book" aria-hidden="true"></span><br/>分类 </a></li>
-								<li><a href="javascript:jump_to_page_taglist();"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><br/>标签 </a></li>
+									<li><a href="javascript:jump_to_page_taglist();"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><br/>标签 </a></li>
 								<li><a href="/lightblog/searchPage.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><br/>搜索 </a></li>
 								<li><a href="javascript:jump_to_page_about();"><span class="glyphicon glyphicon-user" aria-hidden="true"></span><br/>关于 </a></li>
 							</ul>
@@ -53,13 +53,15 @@
 					<div class="block_prod_owner text-center"><span class="text-muted introduction_owner"></span></div>
 				</div>
 			</div>
-			<div class="container-fluid">
+			<div id="container_work" class="container-fluid">
 				<div class="row">
-					<div id="container_category" class="col-md-6 col-md-offset-3 text-center">
-						<p class="text-center h1">category</p>
-						<div class="h4 text-center margin_botttom_20">目前共计<span id="sum_category" class="h4"></span>个分类 </div>
-
-
+					<div class="col-md-6 col-md-offset-3 col-xs-12">
+						 <div class="form-group">
+							<label for="input_search" class="sr-only">搜索</label>
+							<input type="text" class="form-control" id="input_search" placeholder="输入文章标题关键字，按回车键搜索..." autocomplete="off" data-provide="typeahead">							
+						 </div>
+					     <div id="container_list_work">
+					     </div>
 					</div>
 				</div>
 			</div>
@@ -82,7 +84,8 @@
 <!--js-->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script charset="utf-8" src="js/page_category.js"></script>
+<script src="http://cdn.bootcss.com/bootstrap/2.3.1/js/bootstrap-typeahead.min.js"></script>
+<script charset="utf-8" src="js/page_search.js"></script>
 <script charset="utf-8" src="js/page_common.js"></script>
 </body>
 </html>
