fix{bug - aboutPage jumpinto & init}

--- a/lightblog-web/src/main/webapp/editPage.html
+++ b/lightblog-web/src/main/webapp/editPage.html
@@ -17,7 +17,7 @@
     <div id="head_part">
         <nav class="navbar navbar-default navbar-fixed-bottom nav_white_without_border">
             <div class="container magin_top_15">
-                <div id="btn_to_back" class="hidden-xs" data-toggle="tooltip" data-placement="bottom"  title="返回主页">
+                <div id="btn_to_back" class="hidden-xs" data-toggle="tooltip" data-placement="right"  title="返回主页">
                     <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
                 </div>
                 <button id="button_save" type="button" class="btn btn-success navbar-btn btn-sm color_black">
