--- a/lightblog-web/src/main/webapp/workList.html
+++ b/lightblog-web/src/main/webapp/workList.html
@@ -40,15 +40,14 @@
 								<li><a href="javascript:jump_to_page_main();"><span class="glyphicon glyphicon-home" aria-hidden="true"></span><br/>首页 </a></li>
 								<li><a href="javascript:jump_to_page_worklist();"><span class="glyphicon glyphicon-th-list" aria-hidden="true"></span><br/>归档 </a></li>
 								<li><a href="javascript:jump_to_page_categorylist();"><span class="glyphicon glyphicon-book" aria-hidden="true"></span><br/>分类 </a></li>
-								<li><a href="javascript:jump_to_page_taglist();"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><br/>标签 </a></li>
-								<li><a href="/lightblog/searchPage.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><br/>搜索 </a></li>
+								<!--<li><a href="javascript:jump_to_page_taglist();"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span><br/>标签 </a></li>-->
+								<li><a href="javascript:jump_to_page_search();"><span class="glyphicon glyphicon-search" aria-hidden="true"></span><br/>搜索 </a></li>
 								<li><a href="javascript:jump_to_page_about();"><span class="glyphicon glyphicon-user" aria-hidden="true"></span><br/>关于 </a></li>
 							</ul>
 						</div>
 					</div><!-- /.container-fluid -->
 				</nav>
 				<div class="block_name_prod_owner_xs text-center visible-xs-block">
-					<div class="val_ownerId"></div>
 					<div class="block_name_owner"><span class="block_black_for_well text_head name_owner"></span></div>
 					<div class="block_prod_owner text-center"><span class="text-muted introduction_owner"></span></div>
 				</div>
