update{img fixed-auto for device | more clear editor theme for code and url | Mapping from enter to button }

--- a/lightblog-web/src/main/webapp/editPage.html
+++ b/lightblog-web/src/main/webapp/editPage.html
@@ -75,7 +75,7 @@
                 path : 'editormd/lib/',
                 theme : "default",
                 previewTheme : "default",
-                editorTheme : "3024-day",
+                editorTheme : "xq-light",
                 markdown : md,
                 codeFold : true,
                 //syncScrolling : false,
