update{edit page & delete alert ---1.more humane by use jquery-confirm ui }

--- a/lightblog-web/src/main/webapp/editPage.html
+++ b/lightblog-web/src/main/webapp/editPage.html
@@ -8,6 +8,7 @@
     <!--css-->
     <link href="editormd/css/editormd.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/jquery-confirm.min.css" >
     <link href="css/edit_page.css" rel="stylesheet">
     <link href="css/common.css" rel="stylesheet">
 
@@ -17,7 +18,7 @@
     <div id="head_part">
         <nav class="navbar navbar-default navbar-fixed-bottom nav_white_without_border">
             <div class="container magin_top_15">
-                <div id="btn_to_back" class="hidden-xs" data-toggle="tooltip" data-placement="right"  title="返回主页">
+                <div id="btn_to_back" class="hidden-xs" data-toggle="tooltip" data-placement="right"  title="返回">
                     <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
                 </div>
                 <button id="button_save" type="button" class="btn btn-success navbar-btn btn-sm color_black">
@@ -63,6 +64,7 @@
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="editormd/editormd.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/jquery-confirm.min.js"></script>
 <script src="http://cdn.bootcss.com/bootstrap/2.3.1/js/bootstrap-typeahead.min.js"></script>
 <script charset="utf-8" src="js/edit_page.js"></script>
 <script type="text/javascript">
