--- a/lightblog-web/src/main/webapp/workDetail.html
+++ b/lightblog-web/src/main/webapp/workDetail.html
@@ -7,6 +7,7 @@
 	<title>LightBlog-全文阅读</title>
 	<!--css-->
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" >
+	<link rel="stylesheet" href="css/jquery-confirm.min.css" >
 	<link rel="stylesheet" href="editormd/css/editormd.preview.css" />
 	<link href="css/page_work_detail.css" rel="stylesheet">
 	<link href="css/common.css" rel="stylesheet">
@@ -45,7 +46,7 @@
 <div id="btn_to_re_edit" class="hidden-xs" data-toggle="tooltip" title="重新编辑">
 	<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 </div>
-<div id="btn_to_delete" class="hidden-xs" data-toggle="modal" data-target="#myModal"  title="删除文章">
+<div id="btn_to_delete" class="hidden-xs" data-toggle="tooltip" title="删除文章">
 	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
 </div>
 <div id="btn_get_menu" class="hidden-xs" data-toggle="tooltip" data-placement="bottom"  title="菜单">
@@ -54,27 +55,28 @@
 <div id="btn_to_head_black" class="hidden-xs" data-toggle="tooltip" title="回到顶部">
 	<span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
 </div>
-<!-- 模态框（Modal） -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-sm">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title" id="myModalLabel">删除文章</h4>
-			</div>
-			<div id="body_modal_delete" class="modal-body">
-				<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>删除文章将无法找回，确定删除？
-			</div>
-			<div id="foot_modal_delete" class="modal-footer">
-				<button type="button" class="btn btn-primary" data-dismiss="modal">取消删除</button>
-				<button id="btn_delete_work" type="button" class="btn btn-warning">确认删除</button>
-			</div>
-		</div><!-- /.modal-content -->
-	</div><!-- /.modal -->
-</div>
+<!--&lt;!&ndash; 模态框（Modal） &ndash;&gt;-->
+<!--<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">-->
+	<!--<div class="modal-dialog modal-sm">-->
+		<!--<div class="modal-content">-->
+			<!--<div class="modal-header">-->
+				<!--<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>-->
+				<!--<h4 class="modal-title" id="myModalLabel">删除文章</h4>-->
+			<!--</div>-->
+			<!--<div id="body_modal_delete" class="modal-body">-->
+				<!--<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>删除文章将无法找回，确定删除？-->
+			<!--</div>-->
+			<!--<div id="foot_modal_delete" class="modal-footer">-->
+				<!--<button type="button" class="btn btn-primary" data-dismiss="modal">取消删除</button>-->
+				<!--<button id="btn_delete_work" type="button" class="btn btn-warning">确认删除</button>-->
+			<!--</div>-->
+		<!--</div>&lt;!&ndash; /.modal-content &ndash;&gt;-->
+	<!--</div>&lt;!&ndash; /.modal &ndash;&gt;-->
+<!--</div>-->
 <!--js-->
 <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/jquery-confirm.min.js"></script>
 <script charset="utf-8" src="js/page_work_detail.js"></script>
 <script src="js/page_common.js"></script>
 
