new function{first page for visitor|interact for blog including thumb up.share and commit} ps:commit displaying support two stage

--- a/lightblog-web/src/main/webapp/tagList.html
+++ b/lightblog-web/src/main/webapp/tagList.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<div id="pageNature">personal</div>
 <div class="container-fluid auto_height bold_black_top_border font_basic">
     <div class="row">
         <div id="content_main" class="col-xs-12">
